# adaptive-codegraph

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DOCS.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  install.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  language_request.md
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  embed.rs  incremental.rs  index.rs  lib.rs  model.rs  query.rs  search.rs  store.rs
crates/core/src/extract/: mod.rs  plugin.rs  treesitter.rs
crates/core/src/lang/: embedded.rs  mod.rs
crates/core/tests/: integration_test.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: main.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: main.rs
languages/: c.toml  go.toml  javascript.toml  python.toml  rust.toml  typescript.toml
languages/queries/: c.scm  c_edges.scm  go.scm  go_edges.scm  javascript.scm  javascript_edges.scm  python.scm  python_edges.scm  rust.scm  rust_edges.scm  typescript.scm  typescript_edges.scm
tests/fixtures/c/: edge_cases.c
tests/fixtures/go/: edge_cases.go
tests/fixtures/javascript/: edge_cases.js  edge_cases.jsx
tests/fixtures/python/: edge_cases.py
tests/fixtures/rust/: edge_cases.rs
tests/fixtures/typescript/: edge_cases.ts  edge_cases.tsx
