[package]
name = "adaptive-codegraph-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
adaptive-codegraph-core = { path = "../core" }
rmcp = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
